--- a/P1.ipynb
+++ b/P1.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -574,12 +574,160 @@
    },
    "outputs": [],
    "source": [
-    "def process_image(image):\n",
-    "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
-    "    # TODO: put your pipeline here,\n",
-    "    # you should return the final output (image where lines are drawn on lanes)\n",
+    "import matplotlib.image as mpimg\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import os\n",
     "\n",
-    "    return result"
+    "\n",
+    "# const values\n",
+    "DEFAULT_LOW_CANNY_THRESHOLD = 50\n",
+    "DEFAULT_THICKNESS = 2\n",
+    "PROCESSED_FILE = \"processed_images/%s\"\n",
+    "RGB_RED = [255, 0, 0]\n",
+    "SHAPE_X_INDEX = 1\n",
+    "SHAPE_Y_INDEX = 0\n",
+    "TEST_FILE = \"test_images/%s\"\n",
+    "TEST_IMAGE_DIR = \"test_images/\"\n",
+    "THRESHOLD_RATIO = 3\n",
+    "\n",
+    "\n",
+    "def grayscale(img):\n",
+    "    \"\"\"Applies the Grayscale transform\n",
+    "    This will return an image with only one color channel\n",
+    "    but NOTE: to see the returned image as grayscale\n",
+    "    (assuming your grayscaled image is called 'gray')\n",
+    "    you should call plt.imshow(gray, cmap='gray')\"\"\"\n",
+    "    return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    # Or use BGR2GRAY if you read an image with cv2.imread()\n",
+    "    # return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "\n",
+    "def canny(img, low_threshold, high_threshold):\n",
+    "    \"\"\"Applies the Canny transform\"\"\"\n",
+    "    return cv2.Canny(img, low_threshold, high_threshold)\n",
+    "\n",
+    "\n",
+    "def gaussian_blur(img, kernel_size):\n",
+    "    \"\"\"Applies a Gaussian Noise kernel\"\"\"\n",
+    "    return cv2.GaussianBlur(img, (kernel_size, kernel_size), 0)\n",
+    "\n",
+    "\n",
+    "def region_of_interest(img, vertices):\n",
+    "    \"\"\"\n",
+    "    Applies an image mask.\n",
+    "\n",
+    "    Only keeps the region of the image defined by the polygon\n",
+    "    formed from `vertices`. The rest of the image is set to black.\n",
+    "    \"\"\"\n",
+    "    # defining a blank mask to start with\n",
+    "    mask = np.zeros_like(img)\n",
+    "\n",
+    "    # defining a 3 channel or 1 channel color to fill the mask with depending on the input image\n",
+    "    if len(img.shape) > 2:\n",
+    "        channel_count = img.shape[2]  # i.e. 3 or 4 depending on your image\n",
+    "        ignore_mask_color = (255,) * channel_count\n",
+    "    else:\n",
+    "        ignore_mask_color = 255\n",
+    "\n",
+    "    # filling pixels inside the polygon defined by \"vertices\" with the fill color\n",
+    "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
+    "\n",
+    "    # returning the image only where mask pixels are nonzero\n",
+    "    masked_image = cv2.bitwise_and(img, mask)\n",
+    "    return masked_image\n",
+    "\n",
+    "\n",
+    "def draw_lines(img, lines, color=RGB_RED, thickness=DEFAULT_THICKNESS):\n",
+    "    \"\"\"\n",
+    "    NOTE: this is the function you might want to use as a starting point once you want to\n",
+    "    average/extrapolate the line segments you detect to map out the full\n",
+    "    extent of the lane (going from the result shown in raw-lines-example.mp4\n",
+    "    to that shown in P1_example.mp4).\n",
+    "\n",
+    "    Think about things like separating line segments by their\n",
+    "    slope ((y2-y1)/(x2-x1)) to decide which segments are part of the left\n",
+    "    line vs. the right line.  Then, you can average the position of each of\n",
+    "    the lines and extrapolate to the top and bottom of the lane.\n",
+    "\n",
+    "    This function draws `lines` with `color` and `thickness`.\n",
+    "    Lines are drawn on the image inplace (mutates the image).\n",
+    "    If you want to make the lines semi-transparent, think about combining\n",
+    "    this function with the weighted_img() function below\n",
+    "    \"\"\"\n",
+    "    for line in lines:\n",
+    "        for x1, y1, x2, y2 in line:\n",
+    "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
+    "\n",
+    "\n",
+    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
+    "    \"\"\"\n",
+    "    `img` should be the output of a Canny transform.\n",
+    "\n",
+    "    Returns an image with hough lines drawn.\n",
+    "    \"\"\"\n",
+    "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len,\n",
+    "                            maxLineGap=max_line_gap)\n",
+    "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
+    "    draw_lines(line_img, lines)\n",
+    "    return line_img\n",
+    "\n",
+    "\n",
+    "# Python 3 has support for cool math symbols.\n",
+    "def weighted_img(img, initial_img, α=0.8, β=1., λ=0.):\n",
+    "    \"\"\"\n",
+    "    `img` is the output of the hough_lines(), An image with lines drawn on it.\n",
+    "    Should be a blank image (all black) with lines drawn on it.\n",
+    "\n",
+    "    `initial_img` should be the image before any processing.\n",
+    "\n",
+    "    The result image is computed as follows:\n",
+    "\n",
+    "    initial_img * α + img * β + λ\n",
+    "    NOTE: initial_img and img must be the same shape!\n",
+    "    \"\"\"\n",
+    "    return cv2.addWeighted(initial_img, α, img, β, λ)\n",
+    "\n",
+    "\n",
+    "# Helper method for processing the image and applying the lines\n",
+    "def process_image(image):\n",
+    "    copied_image = np.copy(image)\n",
+    "    ysize = image.shape[SHAPE_Y_INDEX]\n",
+    "    xsize = image.shape[SHAPE_X_INDEX]\n",
+    "\n",
+    "    # Apply grayscale, blur and canny edges\n",
+    "    gray = grayscale(copied_image)\n",
+    "    blur_gray = gaussian_blur(gray, 5)\n",
+    "    edges = canny(blur_gray, DEFAULT_LOW_CANNY_THRESHOLD, DEFAULT_LOW_CANNY_THRESHOLD*THRESHOLD_RATIO)\n",
+    "\n",
+    "    # TODO: Make this dynamic for images of different sizes\n",
+    "    # Using a trapezoid instead of a triangle allows more evenness between\n",
+    "    # the left and right side lines across a video clip.\n",
+    "    trapezoid_array = np.array([[100, ysize], [440, 330], [520, 330], [920, ysize]])\n",
+    "    road_edges = region_of_interest(edges, [trapezoid_array])\n",
+    "\n",
+    "    line_drawn_image = hough_lines(road_edges, 1, np.pi/180, 5, 1, 10)\n",
+    "    result = weighted_img(line_drawn_image, copied_image)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# MAIN FUNCTION\n",
+    "#\n",
+    "files = os.listdir(TEST_IMAGE_DIR)\n",
+    "save_image = True\n",
+    "for file_name in files:\n",
+    "    # Retrieve image and get x/y size values\n",
+    "    filePath = TEST_FILE % file_name\n",
+    "    image = mpimg.imread(filePath)\n",
+    "\n",
+    "    final_image = process_image(image)\n",
+    "    final_file_name = PROCESSED_FILE % file_name\n",
+    "    mpimg.imsave(final_file_name, final_image)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -594,13 +742,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video white.mp4\n",
+      "[MoviePy] Writing video white.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 221/222 [00:02<00:00, 88.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: white.mp4 \n",
+      "\n",
+      "Wall time: 2.8 s\n"
+     ]
+    }
+   ],
    "source": [
     "white_output = 'white.mp4'\n",
     "clip1 = VideoFileClip(\"solidWhiteRight.mp4\")\n",
@@ -620,13 +794,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"white.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
@@ -761,7 +952,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
