--- a/P1.ipynb
+++ b/P1.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -582,9 +582,14 @@
     "\n",
     "# const values\n",
     "DEFAULT_LOW_CANNY_THRESHOLD = 50\n",
-    "DEFAULT_THICKNESS = 2\n",
+    "DEFAULT_THICKNESS = 5\n",
+    "LEFT_BOUNDARY_RATIO = .104\n",
     "PROCESSED_FILE = \"processed_images/%s\"\n",
+    "REGION_OF_INTEREST_LEFT_BOUND_RATIO = .458\n",
+    "REGION_OF_INTEREST_RIGHT_BOUND_RATIO = .542\n",
+    "REGION_OF_INTEREST_HEIGHT_RATIO = .611\n",
     "RGB_RED = [255, 0, 0]\n",
+    "RIGHT_BOUNDARY_RATIO = .958\n",
     "SHAPE_X_INDEX = 1\n",
     "SHAPE_Y_INDEX = 0\n",
     "TEST_FILE = \"test_images/%s\"\n",
@@ -638,7 +643,7 @@
     "    return masked_image\n",
     "\n",
     "\n",
-    "def draw_lines(img, lines, color=RGB_RED, thickness=DEFAULT_THICKNESS):\n",
+    "def draw_lines(img, lines, width, bottom_height, top_height, color=RGB_RED, thickness=DEFAULT_THICKNESS):\n",
     "    \"\"\"\n",
     "    NOTE: this is the function you might want to use as a starting point once you want to\n",
     "    average/extrapolate the line segments you detect to map out the full\n",
@@ -655,12 +660,42 @@
     "    If you want to make the lines semi-transparent, think about combining\n",
     "    this function with the weighted_img() function below\n",
     "    \"\"\"\n",
+    "    middle = int(width / 2)\n",
+    "    left_array = []\n",
+    "    right_array= []\n",
+    "\n",
     "    for line in lines:\n",
     "        for x1, y1, x2, y2 in line:\n",
-    "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
+    "            # There should be no instance where a line segment crosses between the middle of the image\n",
+    "            if x1 < middle:\n",
+    "                left_array.append((x1, y1))\n",
+    "                left_array.append((x2, y2))\n",
+    "            else:\n",
+    "                right_array.append((x1, y1))\n",
+    "                right_array.append((x2, y2))\n",
+    "\n",
+    "    # Generate a y=mx+b formula\n",
+    "    left_formula = np.polyfit(np.array(left_array)[:, 0], np.array(left_array)[:, 1], 1)\n",
+    "    right_formula = np.polyfit(np.array(right_array)[:, 0], np.array(right_array)[:, 1], 1)\n",
+    "\n",
+    "    left_m = left_formula[0]\n",
+    "    left_b = left_formula[1]\n",
+    "\n",
+    "    right_m = right_formula[0]\n",
+    "    right_b = right_formula[1]\n",
+    "\n",
+    "    # Calculate the x positions based on the parameter bottom / top heights.\n",
+    "    left_x_bottom = (bottom_height - left_b) / left_m\n",
+    "    left_x_top = (top_height - left_b) / left_m\n",
+    "    right_x_bottom = (bottom_height - right_b) / right_m\n",
+    "    right_x_top = (top_height - right_b) / right_m\n",
+    "\n",
+    "    # Draw a line from the bottom of the image to the specified maximum height\n",
+    "    cv2.line(img, (int(left_x_bottom), bottom_height), (int(left_x_top), top_height), color, thickness)\n",
+    "    cv2.line(img, (int(right_x_bottom), bottom_height), (int(right_x_top), top_height), color, thickness)\n",
     "\n",
     "\n",
-    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
+    "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap, width, bottom_height, top_height):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
     "\n",
@@ -669,7 +704,7 @@
     "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len,\n",
     "                            maxLineGap=max_line_gap)\n",
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
-    "    draw_lines(line_img, lines)\n",
+    "    draw_lines(line_img, lines, width, bottom_height, top_height)\n",
     "    return line_img\n",
     "\n",
     "\n",
@@ -700,13 +735,18 @@
     "    blur_gray = gaussian_blur(gray, 5)\n",
     "    edges = canny(blur_gray, DEFAULT_LOW_CANNY_THRESHOLD, DEFAULT_LOW_CANNY_THRESHOLD*THRESHOLD_RATIO)\n",
     "\n",
+    "    leftmost = int(xsize * LEFT_BOUNDARY_RATIO)\n",
+    "    rightmost = int(xsize * RIGHT_BOUNDARY_RATIO)\n",
+    "    region_height = int(ysize * REGION_OF_INTEREST_HEIGHT_RATIO)\n",
+    "    region_left = int(xsize * REGION_OF_INTEREST_LEFT_BOUND_RATIO)\n",
+    "    region_right = int(xsize * REGION_OF_INTEREST_RIGHT_BOUND_RATIO)\n",
     "    # TODO: Make this dynamic for images of different sizes\n",
     "    # Using a trapezoid instead of a triangle allows more evenness between\n",
     "    # the left and right side lines across a video clip.\n",
-    "    trapezoid_array = np.array([[100, ysize], [440, 330], [520, 330], [920, ysize]])\n",
+    "    trapezoid_array = np.array([[leftmost, ysize], [region_left, region_height], [region_right, region_height], [rightmost, ysize]])\n",
     "    road_edges = region_of_interest(edges, [trapezoid_array])\n",
     "\n",
-    "    line_drawn_image = hough_lines(road_edges, 1, np.pi/180, 5, 1, 10)\n",
+    "    line_drawn_image = hough_lines(road_edges, 1, np.pi/180, 15, 10, 20, xsize, ysize, region_height)\n",
     "    result = weighted_img(line_drawn_image, copied_image)\n",
     "\n",
     "    return result\n",
@@ -742,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -761,7 +801,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:02<00:00, 88.94it/s]\n"
+      "100%|█████████▉| 221/222 [00:02<00:00, 86.40it/s]\n"
      ]
     },
     {
@@ -771,7 +811,7 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: white.mp4 \n",
       "\n",
-      "Wall time: 2.8 s\n"
+      "Wall time: 2.87 s\n"
      ]
     }
    ],
@@ -794,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -813,7 +853,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,13 +892,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video yellow.mp4\n",
+      "[MoviePy] Writing video yellow.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 681/682 [00:08<00:00, 83.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: yellow.mp4 \n",
+      "\n",
+      "Wall time: 8.64 s\n"
+     ]
+    }
+   ],
    "source": [
     "yellow_output = 'yellow.mp4'\n",
     "clip2 = VideoFileClip('solidYellowLeft.mp4')\n",
@@ -868,13 +934,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"yellow.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
@@ -910,18 +993,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video extra.mp4\n",
+      "[MoviePy] Writing video extra.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 251/251 [00:06<00:00, 39.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: extra.mp4 \n",
+      "\n",
+      "Wall time: 7.03 s\n"
+     ]
+    }
+   ],
    "source": [
     "challenge_output = 'extra.mp4'\n",
     "clip2 = VideoFileClip('challenge.mp4')\n",
     "challenge_clip = clip2.fl_image(process_image)\n",
     "%time challenge_clip.write_videofile(challenge_output, audio=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"extra.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HTML(\"\"\"\n",
+    "<video width=\"960\" height=\"540\" controls>\n",
+    "  <source src=\"{0}\">\n",
+    "</video>\n",
+    "\"\"\".format(challenge_output))"
    ]
   },
   {
@@ -933,13 +1076,7 @@
     "editable": true
    },
    "outputs": [],
-   "source": [
-    "HTML(\"\"\"\n",
-    "<video width=\"960\" height=\"540\" controls>\n",
-    "  <source src=\"{0}\">\n",
-    "</video>\n",
-    "\"\"\".format(challenge_output))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
